src/syntax/snapshots/texlab__syntax__latex__tests__equation_missing_begin.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\begin{a} foo bar \\] \\end{b}\"#)"

---
ROOT@0..28
  PREAMBLE@0..0
  ENVIRONMENT@0..28
    BEGIN@0..10
      BEGIN_ENV@0..6 "\\begin"
      BRACE_GROUP_WORD@6..10
        L_BRACE@6..7 "{"
        WORD@7..8 "a"
        R_BRACE@8..9 "}"
        WHITESPACE@9..10 " "
    TEXT@10..18
      WORD@10..13 "foo"
      WHITESPACE@13..14 " "
      WORD@14..17 "bar"
      WHITESPACE@17..18 " "
    GENERIC_COMMAND@18..21
      END_EQUATION@18..20 "\\]"
      WHITESPACE@20..21 " "
    END@21..28
      END_ENV@21..25 "\\end"
      BRACE_GROUP_WORD@25..28
        L_BRACE@25..26 "{"
        WORD@26..27 "b"
        R_BRACE@27..28 "}"

