src/syntax/snapshots/texlab__syntax__latex__tests__generic_command_args.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\foo{bar}[qux]\"#)"

---
ROOT@0..14
  PREAMBLE@0..14
    GENERIC_COMMAND@0..14
      GENERIC_COMMAND_NAME@0..4 "\\foo"
      BRACE_GROUP@4..9
        L_BRACE@4..5 "{"
        TEXT@5..8
          WORD@5..8 "bar"
        R_BRACE@8..9 "}"
      BRACKET_GROUP@9..14
        L_BRACKET@9..10 "["
        TEXT@10..13
          WORD@10..13 "qux"
        R_BRACKET@13..14 "]"

