src/syntax/snapshots/texlab__syntax__latex__tests__glossary_entry_definition_simple.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\newglossaryentry{foo}{bar = baz, qux,}\"#)"

---
ROOT@0..39
  PREAMBLE@0..39
    GLOSSARY_ENTRY_DEFINITION@0..39
      GLOSSARY_ENTRY_DEFINITION_COMMAND@0..17 "\\newglossaryentry"
      BRACE_GROUP_WORD@17..22
        L_BRACE@17..18 "{"
        WORD@18..21 "foo"
        R_BRACE@21..22 "}"
      BRACE_GROUP_KEY_VALUE@22..39
        L_BRACE@22..23 "{"
        KEY_VALUE_BODY@23..38
          KEY_VALUE_PAIR@23..38
            KEY@23..27
              WORD@23..26 "bar"
              WHITESPACE@26..27 " "
            EQUALITY_SIGN@27..28 "="
            WHITESPACE@28..29 " "
            VALUE@29..38
              TEXT@29..38
                WORD@29..32 "baz"
                COMMA@32..33 ","
                WHITESPACE@33..34 " "
                WORD@34..37 "qux"
                COMMA@37..38 ","
        R_BRACE@38..39 "}"

