src/syntax/snapshots/texlab__syntax__latex__tests__graphics_include_options.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\includegraphics[scale=.5]{foo/bar.pdf}\"#)"

---
ROOT@0..39
  PREAMBLE@0..39
    GRAPHICS_INCLUDE@0..39
      GRAPHICS_INCLUDE_COMMAND@0..16 "\\includegraphics"
      BRACKET_GROUP_KEY_VALUE@16..26
        L_BRACKET@16..17 "["
        KEY_VALUE_BODY@17..25
          KEY_VALUE_PAIR@17..25
            KEY@17..22
              WORD@17..22 "scale"
            EQUALITY_SIGN@22..23 "="
            VALUE@23..25
              TEXT@23..25
                WORD@23..25 ".5"
        R_BRACKET@25..26 "]"
      BRACE_GROUP_WORD_LIST@26..39
        L_BRACE@26..27 "{"
        WORD@27..38 "foo/bar.pdf"
        R_BRACE@38..39 "}"

