src/syntax/snapshots/texlab__syntax__latex__tests__graphics_include_simple.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\includegraphics{foo/bar.pdf}\"#)"

---
ROOT@0..29
  PREAMBLE@0..29
    GRAPHICS_INCLUDE@0..29
      GRAPHICS_INCLUDE_COMMAND@0..16 "\\includegraphics"
      BRACE_GROUP_WORD_LIST@16..29
        L_BRACE@16..17 "{"
        WORD@17..28 "foo/bar.pdf"
        R_BRACE@28..29 "}"

