src/syntax/snapshots/texlab__syntax__latex__tests__inkscape_include_options.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\includesvg[scale=.5]{foo/bar}\"#)"

---
ROOT@0..30
  PREAMBLE@0..30
    SVG_INCLUDE@0..30
      SVG_INCLUDE_COMMAND@0..11 "\\includesvg"
      BRACKET_GROUP_KEY_VALUE@11..21
        L_BRACKET@11..12 "["
        KEY_VALUE_BODY@12..20
          KEY_VALUE_PAIR@12..20
            KEY@12..17
              WORD@12..17 "scale"
            EQUALITY_SIGN@17..18 "="
            VALUE@18..20
              TEXT@18..20
                WORD@18..20 ".5"
        R_BRACKET@20..21 "]"
      BRACE_GROUP_WORD_LIST@21..30
        L_BRACE@21..22 "{"
        WORD@22..29 "foo/bar"
        R_BRACE@29..30 "}"

