src/syntax/snapshots/texlab__syntax__latex__tests__inline_double_dollar.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"$$x \\in [0, \\infty)$$\"#)"

---
ROOT@0..21
  PREAMBLE@0..21
    FORMULA@0..21
      DOLLAR@0..2 "$$"
      TEXT@2..4
        WORD@2..3 "x"
        WHITESPACE@3..4 " "
      GENERIC_COMMAND@4..21
        GENERIC_COMMAND_NAME@4..7 "\\in"
        WHITESPACE@7..8 " "
        BRACKET_GROUP@8..21
          L_BRACKET@8..9 "["
          TEXT@9..12
            WORD@9..10 "0"
            COMMA@10..11 ","
            WHITESPACE@11..12 " "
          GENERIC_COMMAND@12..18
            GENERIC_COMMAND_NAME@12..18 "\\infty"
          ERROR@18..19 ")"
          FORMULA@19..21
            DOLLAR@19..21 "$$"
            MISSING@21..21 ""
          MISSING@21..21 ""
      MISSING@21..21 ""

